force-app/src/objects/Accreditation_Status_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Accreditation_Status__c</fullName>
        <label>Account Accreditation Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Record_Type_Name__c</fullName>
        <label>Accreditation Record Type Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Status__c</fullName>
        <label>Accreditation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accreditation Candidate</fullName>
                    <default>true</default>
                    <label>Accreditation Candidate</label>
                </value>
                <value>
                    <fullName>Re-Accreditation Candidate</fullName>
                </value>
                <value>
                    <fullName>Accredited</fullName>
                </value>
                <value>
                    <fullName>Re-Accredited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Outcome__c</fullName>
        <label>Activity Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A. Award Accreditation or Re-Accreditation</fullName>
                    <default>true</default>
                    <label>A. Award Accreditation or Re-Accreditation</label>
                </value>
                <value>
                    <fullName>B. Award Accreditation or Re-Accreditation with specific qualifications</fullName>
                </value>
                <value>
                    <fullName>Continuance within cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Record_Type_Name__c</fullName>
        <label>Activity Record Type Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Accreditation Status Mapping</label>
    <pluralLabel>Accreditation Status Mapping</pluralLabel>
</CustomObject>